logs/cetus.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyMySQL-0.8.0.dist-info'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/aiomysql'...
Listing './lib/python3.5/site-packages/aiomysql/sa'...
Listing './lib/python3.5/site-packages/aiomysql-0.0.11.egg-info'...
Listing './lib/python3.5/site-packages/async_generator'...
Listing './lib/python3.5/site-packages/async_generator-1.8.dist-info'...
Listing './lib/python3.5/site-packages/asyncio_extras'...
Listing './lib/python3.5/site-packages/asyncio_extras-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/asyncpg'...
Listing './lib/python3.5/site-packages/asyncpg/_testbase'...
Listing './lib/python3.5/site-packages/asyncpg/exceptions'...
Listing './lib/python3.5/site-packages/asyncpg/protocol'...
Listing './lib/python3.5/site-packages/asyncpg/protocol/codecs'...
Listing './lib/python3.5/site-packages/asyncpg/protocol/record'...
Listing './lib/python3.5/site-packages/asyncpg-0.14.0.dist-info'...
Listing './lib/python3.5/site-packages/cetus'...
Listing './lib/python3.5/site-packages/cetus/data_access'...
Compiling './lib/python3.5/site-packages/cetus/data_access/connectors.py'...
***   File "./lib/python3.5/site-packages/cetus/data_access/connectors.py", line 33
    yield connection_pool
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/cetus/data_access/execution.py'...
***   File "./lib/python3.5/site-packages/cetus/data_access/execution.py", line 64
    return [row async for row in cursor]
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cetus/data_access/reading.py'...
***   File "./lib/python3.5/site-packages/cetus/data_access/reading.py", line 32
    column_alias = f'{column_function_name}_1'
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cetus/data_access/saving.py'...
***   File "./lib/python3.5/site-packages/cetus/data_access/saving.py", line 55
    f'but found: "{primary_key}".')
    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cetus/data_access/utils.py'...
***   File "./lib/python3.5/site-packages/cetus/data_access/utils.py", line 17
    MYSQL_MAX_BIGINT_VALUE = 18_446_744_073_709_551_615
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cetus/queries'...
Compiling './lib/python3.5/site-packages/cetus/queries/deletion.py'...
***   File "./lib/python3.5/site-packages/cetus/queries/deletion.py", line 10
    query = f'DELETE FROM {table_name} '
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cetus/queries/filters.py'...
***   File "./lib/python3.5/site-packages/cetus/queries/filters.py", line 27
    query += f'WHERE {filters} '
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cetus/queries/reading.py'...
***   File "./lib/python3.5/site-packages/cetus/queries/reading.py", line 28
    query = (f'SELECT {columns} '
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cetus/queries/saving.py'...
***   File "./lib/python3.5/site-packages/cetus/queries/saving.py", line 47
    res = (f'INSERT INTO {table_name} ({columns}) '
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cetus/queries/updating.py'...
***   File "./lib/python3.5/site-packages/cetus/queries/updating.py", line 15
    query = f'UPDATE {table_name} '
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cetus/queries/utils.py'...
***   File "./lib/python3.5/site-packages/cetus/queries/utils.py", line 22
    query += f'ORDER BY {orderings} '
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cetus/sqlalchemy'...
Listing './lib/python3.5/site-packages/cetus-0.9.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymysql'...
Listing './lib/python3.5/site-packages/pymysql/constants'...
Listing './lib/python3.5/site-packages/pymysql/tests'...
Listing './lib/python3.5/site-packages/pymysql/tests/thirdparty'...
Listing './lib/python3.5/site-packages/pymysql/tests/thirdparty/test_MySQLdb'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/__init__.py'...
Listing './lib/python3.5/site-packages/tests/data_access_tests'...
Listing './lib/python3.5/site-packages/tests/fixtures'...
Listing './lib/python3.5/site-packages/tests/pep492'...
Listing './lib/python3.5/site-packages/tests/queries_tests'...
Listing './lib/python3.5/site-packages/tests/sa'...
Listing './lib/python3.5/site-packages/tests/strategies'...
Compiling './lib/python3.5/site-packages/tests/utils.py'...
***   File "./lib/python3.5/site-packages/tests/utils.py", line 67
    f'with "{db_uri_str}".')
    ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
